@@ -20,10 +20,23 @@ import com.jayway.restassured.config.RestAssuredConfig
 import com.jayway.restassured.response.ExtractableResponse
 import com.jayway.restassured.response.Response
 import com.jayway.restassured.response.ValidatableResponse
+import com.jayway.restassured.specification.ResponseSpecification
+
+import static com.jayway.restassured.internal.assertion.AssertParameter.notNull
 
 class ValidatableResponseImpl extends ValidatableResponseOptionsImpl<ValidatableResponse, Response> implements ValidatableResponse {
 
   ValidatableResponseImpl(String contentType, ResponseParserRegistrar rpr, RestAssuredConfig config, Response response, ExtractableResponse<Response> extractableResponse) {
     super(contentType, rpr, config, response, extractableResponse)
+  }
+
+  ValidatableResponse spec(ResponseSpecification responseSpecification) {
+    return specification(responseSpecification)
+  }
+
+  ValidatableResponse specification(ResponseSpecification responseSpecification) {
+    notNull(responseSpecification, ResponseSpecification.class)
+    responseSpecification.validate(response);
+    this
   }
 }
